# ch8-emulator

./: CMakeLists.txt  README.md
cmake/: sdl2-config.cmake
src/: chip8.c  chip8.h  chip8_instruction.c  chip8_instruction.h  macros.h  main.c  opcode.h  output.c  output.h
